[gd_scene load_steps=19 format=2]

[ext_resource path="res://Bullet_Purple.gd" type="Script" id=1]
[ext_resource path="res://characters/purple/purple bullet/pbulle 1.png" type="Texture" id=2]
[ext_resource path="res://characters/purple/purple bullet/pbulle 2.png" type="Texture" id=3]
[ext_resource path="res://characters/purple/purple bullet/pbulle 3.png" type="Texture" id=4]
[ext_resource path="res://characters/purple/purple bullet/pbulle 4.png" type="Texture" id=5]
[ext_resource path="res://characters/purple/purple bullet/pbulle 5.png" type="Texture" id=6]
[ext_resource path="res://music/bubble pop.wav" type="AudioStream" id=7]
[ext_resource path="res://characters/purple/purple bullet/pbullet 1.png" type="Texture" id=8]
[ext_resource path="res://characters/purple/purple bullet/pbullet 2.png" type="Texture" id=9]
[ext_resource path="res://characters/purple/purple bullet/pbullet 3.png" type="Texture" id=10]
[ext_resource path="res://characters/purple/purple bullet/pbullet 4.png" type="Texture" id=11]
[ext_resource path="res://characters/purple/purple bullet/pbullet 5.png" type="Texture" id=12]
[ext_resource path="res://characters/purple/purple bullet/pbullet 6.png" type="Texture" id=13]
[ext_resource path="res://characters/purple/purple bullet/pbullet 7.png" type="Texture" id=14]
[ext_resource path="res://characters/purple/purple bullet/pbullet 8.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "blank",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.24374

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Bullet_Purple" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.28247, 7.15378 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "blank"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.307358, -2.26498e-006 )
scale = Vector2( 0.600436, 0.600436 )

[node name="Shot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 3 )
frame = 1
playing = true
[connection signal="area_entered" from="." to="." method="_on_Bullet_Purple_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
